--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
         O Bosque Rodrigues Alves abriga ainda 435 animais de 29 espécies que vivem em cativeiro e outras 29 em liberdade ou semi-liberdade distribuídas na área de mata.</p>
       <p> Para mais informações sobre o Bosque <a href="https://semma.belem.pa.gov.br/bosque/" target="_blank">Visite</a> </p>
     </section>
-    <section>
+    <section id="mercado">
       <h2>Mercado Ver-o-Peso</h2>
       <img src="imagens/Ver-oPeso-Belem.jpg" alt="ver-o-peso" class="img">
       <p>
-        O <strong>Mercado Ver-o-Peso</strong> ou Mercado Municipal Bolonha de Peixe ou Mercado de Ferro ou somente Ver-o-Peso, é um mercado público, feira-livre, zona portuária de pequeno porte, inaugurado em 1901(substituindo a "Casa de Haver-o-Peso", 1625-1899)que faz parte do Complexo do Ver-o-Peso (1625), situado na cidade paraense de Belém (Pará) no bairro da Campina, às margens da baía do Guajará, ao lado da Estação das Docas.
+        <strong>Mercado Ver-o-Peso</strong> ou Mercado Municipal Bolonha de Peixe ou Mercado de Ferro ou somente Ver-o-Peso, é um mercado público, feira-livre, zona portuária de pequeno porte, inaugurado em 1901(substituindo a "Casa de Haver-o-Peso", 1625-1899)que faz parte do Complexo do Ver-o-Peso (1625), situado na cidade paraense de Belém (Pará) no bairro da Campina, às margens da baía do Guajará, ao lado da Estação das Docas.
 
         É considerado um dos mercados públicos mais antigos do País, foi eleito uma das maravilhas do estado do Pará e uma das 7 Maravilhas do Brasil.
 
