--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         O Bosque Rodrigues Alves abriga ainda 435 animais de 29 espécies que vivem em cativeiro e outras 29 em liberdade ou semi-liberdade distribuídas na área de mata.</p>
       <p> Para mais informações sobre o Bosque <a href="https://semma.belem.pa.gov.br/bosque/" target="_blank">Visite</a> </p>
     </section>
-    <section id="mercado">
+    <section>
       <h2>Mercado Ver-o-Peso</h2>
       <img src="imagens/Ver-oPeso-Belem.jpg" alt="ver-o-peso" class="img">
       <p>
