--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <header>
     <h1> <a href="#">Bem-vindo a Belém do Pará</a></h1>
+    <img src="imagens/bandeirapqn.png" alt="bandeira para">
   </header>
   <nav>
     <a href="#">Inicio</a>
