--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1> <a href="#">Bem-vindo a Belém do Pará</a></h1>
+    <h1>Bem-vindo a Belém do Pará</h1>
     <img src="imagens/bandeirapqn.png" alt="bandeira para" id="fotoh1">
   </header>
   <nav>
